metadatafullcopy/unpackaged/objects/Daily_Timesheet__c.object
<CustomObject>
    <fields>
        <fullName>DailyTimsheetRecord__c</fullName>
        <label>DailyTimsheetRecord</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <formula>Job__r.Job_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>ATI_Job__c</referenceTo>
        <relationshipLabel>Daily Timesheet</relationshipLabel>
        <relationshipName>Daily_Timesheet</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                    <default>true</default>
                    <label>Day</label>
                </value>
                <value>
                    <fullName>Night</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>comments__c</fullName>
        <description>Daily Timesheet comments</description>
        <label>comments</label>
        <type>TextArea</type>
    </fields>
    <label>Daily Timesheet</label>
    <nameField>
        <label>Daily Timesheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily Timesheet</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>